[gd_scene load_steps=4 format=3 uid="uid://djs7dyphqh4br"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_omc0q"]

[sub_resource type="LabelSettings" id="LabelSettings_muj8u"]
font_size = 81

[sub_resource type="LabelSettings" id="LabelSettings_31nwi"]
font_size = 61

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_omc0q")

[node name="BeginButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -42.0
offset_right = 145.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
text = "begin game"

[node name="HealthLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -209.0
offset_right = 20.0
offset_bottom = -186.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
label_settings = SubResource("LabelSettings_muj8u")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MiddleText" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -60.0
offset_right = 23.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
text = "YOU PASSED LEVEL 1"
label_settings = SubResource("LabelSettings_31nwi")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="BeginButton" to="." method="_on_begin_button_pressed"]
